--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body>
-    <h1>Contenu de ma page</h1>
+    <header class="header">
+      <div class="header__topBar">
+        <div class="container">
+          <a href="#" title="Good inc.">
+            <img src="images/logo.png" alt="Logo" />
+            <h1>Good inc.</h1>
+          </a>
+        </div>
+      </div>
+      <nav class="header__nav">
+        <ul class="header__nav__menu container">
+            <li><a href="#" title="Accueil"><img src="images/accueil.png" alt="accueil" /></a></li>
+            <li><a href="#" title="Item 1">Portfolio</a></li>
+            <li><a href="#" title="Item 1">Services</a></li>
+            <li><a href="#" title="Item 1">Staff</a></li>
+            <li><a href="#" title="Item 1">Article</a></li>
+            <li><a href="#" title="Item 1">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
