--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             <img src="images/logo.png" alt="Logo" />
             <h1>Good inc.</h1>
           </a>
+          <div class="header__topBar__burger">
+            <div class="hamburger hamburger--spring">
+              <div class="hamburger-box">
+                <div class="hamburger-inner"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <nav class="header__nav">
